# kerr-accretion-disk

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  AI_USAGE.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  KERR_DISK_CODEX_RESEARCH_GUIDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: docs.yml  release.yml  tests.yml
configs/production/: phase11_screening.yaml  phase12_confirmatory.yaml  phase12_joint_v5.yaml  phase12_joint_v5_full.yaml  phase13p5_multi_epoch.yaml  release.yaml
configs/validation/: bootstrap.yaml
data/: README.md
data/processed/: validation_summary.csv
docs/: assumptions.md  equation_registry.md  numerical_methods.md  user_guide.md  validation.md
literature/: gap_matrix.csv  novelty_decision.md  reference_verification.csv  reference_verification_summary.md  references.bib
paper/: claim_audit.md  cover_letter.tex  figure_captions.md  main.tex  references.bib  response_to_reviewers.tex
paper/tables/: figure3_disk_flux_source.csv  figure4_transfer_image_source.csv  figure5_spectra_source.csv  priors.csv  table1_phase12_design.csv  table2_validation_summary.csv  table3_confirmatory_by_spin_inclination.csv  table4_resolution_stability.csv  table5_transfer_validation.csv  (+1 more)
scripts/: archive_release.py  audit_external_raytracers.py  make_figures.py  make_tables.py  reproduce_all.py  run_confirmatory.py  run_grid.py  run_inference.py  run_joint_campaign.py  run_joint_multi_epoch.py  run_multi_epoch.py  run_transfer_validation.py  run_v5_full_campaign.py  run_validation.py  verify_bibliography.py
(+84 files in other folders)
